# Options-Pricer

./: CMakeLists.txt  README.md
docs/: pricing_comparison.csv
include/: BinomialTreeEngine.h  BlackScholesEngine.h  Option.h  Payoff.h
src/: BinomialTreeEngine.cpp  BlackScholesEngine.cpp  Option.cpp  Payoff.cpp  main.cpp
test/: option_tests.cpp  tests.cpp
